@@ -30,97 +30,76 @@ public class SecurityConfig {
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
-
         CorsConfiguration config = new CorsConfiguration();
 
-        // FRONTEND URL
-        String raw = System.getenv()
-                .getOrDefault(
-                        "APP_CORS_ALLOWED_ORIGINS",
-                        "https://forum-front-end-pied.vercel.app"
-                )
-                .replace(" ", "");
+        // Lấy danh sách domain từ môi trường, mặc định cho phép localhost để dev
+        String raw = System.getenv().getOrDefault(
+                "APP_CORS_ALLOWED_ORIGINS",
+                "http://localhost:3000,http://localhost:5173,https://forum-front-end-pied.vercel.app"
+        ).replace(" ", "");
 
-        config.setAllowedOriginPatterns(
-                Arrays.asList(raw.split(","))
-        );
+        // Nếu là production và muốn an toàn tuyệt đối, dùng danh sách cụ thể thay vì "*"
+        if (raw.equals("*")) {
+            config.addAllowedOriginPattern("*");
+        } else {
+            config.setAllowedOrigins(Arrays.asList(raw.split(",")));
+        }
 
-        config.setAllowedMethods(List.of(
-                "GET",
-                "POST",
-                "PUT",
-                "PATCH",
-                "DELETE",
-                "OPTIONS"
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+
+        // Bổ sung đầy đủ các Headers để không bị chặn Pre-flight request
+        config.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Accept",
+                "Origin",
+                "X-Requested-With",
+                "Cache-Control"
         ));
 
-        config.setAllowedHeaders(List.of("*"));
+        config.setExposedHeaders(List.of("Authorization"));
 
-        config.setExposedHeaders(List.of(
-                "Authorization"
-        ));
+        // Cho phép gửi credentials (token/cookies) - cực kỳ quan trọng cho frontend hiện đại
+        config.setAllowCredentials(true);
 
-        // JWT Bearer token
-        config.setAllowCredentials(false);
-
-        UrlBasedCorsConfigurationSource source =
-                new UrlBasedCorsConfigurationSource();
-
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
-
         return source;
     }
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-
         http
                 .csrf(AbstractHttpConfigurer::disable)
-
+                // Kích hoạt cấu hình CORS đã định nghĩa ở trên
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
 
-                .sessionManagement(session ->
-                        session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
-                )
-
                 .authorizeHttpRequests(auth -> auth
-
-                        // PRE-FLIGHT REQUEST
+                        // Ưu tiên cho phép các yêu cầu OPTIONS (CORS Pre-flight) đi qua
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                        // PUBLIC
-                        .requestMatchers("/").permitAll()
                         .requestMatchers("/ws/**").permitAll()
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
                         .requestMatchers("/api/auth/**").permitAll()
 
                         // PUBLIC GET APIs
-                        .requestMatchers(HttpMethod.GET, "/api/**").permitAll()
-
-                        // ADMIN
-                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/api/category/**", "/api/post/**", "/api/comment/**", "/api/utils/**", "/api/user/**").permitAll()
 
                         // AUTHENTICATED APIs
-                        .requestMatchers(HttpMethod.POST, "/api/category/**").authenticated()
-                        .requestMatchers(HttpMethod.POST, "/api/post/**").authenticated()
-                        .requestMatchers(HttpMethod.POST, "/api/comment/**").authenticated()
-                        .requestMatchers(HttpMethod.POST, "/api/user/**").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/category/**", "/api/post/**", "/api/comment/**", "/api/user/**").authenticated()
+                        .requestMatchers(HttpMethod.PUT, "/api/user/**", "/api/post/**").authenticated()
 
-                        .requestMatchers(HttpMethod.PUT, "/api/user/**").authenticated()
-                        .requestMatchers(HttpMethod.PUT, "/api/post/**").authenticated()
-
-                        .requestMatchers(HttpMethod.DELETE, "/api/comment/delete/**").authenticated()
-
+                        // ROLES
                         .requestMatchers(HttpMethod.DELETE, "/api/post/delete/**").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.DELETE, "/api/comment/delete/**").authenticated()
 
                         .anyRequest().authenticated()
                 )
-
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
                 .authenticationProvider(authenticationProvider)
-
-                .addFilterBefore(
-                        jwtAuthFilter,
-                        UsernamePasswordAuthenticationFilter.class
-                );
+                .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
 
         return http.build();
     }
